--- a/_config.yml
+++ b/_config.yml
@@ -1,47 +1,20 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: Elektroniklådan
 company: Elektroniklådan AB
+description: Utveckling och utbildning inom elektronik och firmware.
 address: >-
   Bergsmansvägen 6
   812 90 Storvik
 #email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Produktutveckling, elektronik och firmware.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://elektronikladan.se" # the base hostname & protocol for your site, e.g. http://example.com
-#github_username:  elektronikladan
-#linkedin_username: albertskog
-lang: sv
 logo: assets/img/logo-v1.png
+lang: sv
+#github_username:  elektronikladan
+#linkedin_username: elektronikladan
+
+url: "https://elektronikladan.se"
+baseurl: ""
 
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-seo-tag
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
