Fix h-card and clean up footer

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 title: Elektroniklådan
 company: Elektroniklådan AB
 description: Utveckling och utbildning inom elektronik och firmware.
+org_info: >-
+  Org. nr.: 
 address: >-
   Bergsmansvägen 6
   812 90 Storvik
