proper name and org nr

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Elektroniklådan
-company: Elektroniklådan AB
+company: Elektroniklådan i Bro AB
 description: Utveckling och utbildning inom elektronik och firmware.
 org_info: >-
-  Org. nr.: 
+  org.nr: 559262-8670
 address: >-
   Bergsmansvägen 6
   812 90 Storvik
