update text and improve seo

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Elektroniklådan
 company: Elektroniklådan i Bro AB
-description: Utveckling och utbildning inom elektronik och firmware.
+tagline: Utveckling av firmware och elektronik
+description: Vi hjälper till med att skriva kod och utveckla elektronik. Vi kan ta fram prototyper, jobbar gärna med trådlösa standarder och håller även kurser.
 org_info: >-
   org.nr: 559262-8670
 address: >-
